<resources>
    <string name="app_name">TestProject</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="logout">Logout</string>
    <string name="sign_out">Odjavi se</string>
    <string name="StudentInfo">Student Info</string>
    <string name="weeklySchedule">Nedeljni raspored</string>
    <string name="yearlyCalender">Godisnji kalendar</string>
    <string name="notifications">Obaveštenja</string>
    <string name="settings">Podešavanja</string>
    <string name="pushNotifications">Push notifikacije</string>
    <string name="off">Isklj.</string>
    <string name="on">Uklj.</string>

    <string name="_09h">09h</string>
    <string name="_10h">10h</string>
    <string name="_11h">11h</string>
    <string name="_12h">12h</string>
    <string name="_13h">13h</string>
    <string name="_14h">14h</string>
    <string name="_15h">15h</string>
    <string name="_16h">16h</string>
    <string name="_17h">17h</string>
    <string name="_18h">18h</string>
    <string name="_19h">19h</string>
    <string name="_20h">20h</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="placeholderUsername">android.studio@android.com</string>
    <string name="placeholderGroup">Grupa 101</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--<string name="gcm_defaultSenderId">0x7f060034</string>-->
</resources>
