<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_weekly_schedule"
            android:icon="@drawable/ic_menu_weekly_schedule"
            android:title="@string/weeklySchedule" />
        <item
            android:id="@+id/nav_yearly_calendar"
            android:icon="@drawable/ic_yearly_calendar"
            android:title="@string/yearlyCalender" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_menu_notifications"
            android:title="@string/notifications" />
    </group>

    <item android:title="@string/logout">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>
